package ar.edu.utn.frba.dds;

public enum CamposHecho{
    TITULO,
    DESCRIPCION,
    CATEGORIA,
    LATITUD,
    LONGITUD,
    FECHADEHECHO
}