@startuml

enum CamposHecho{
    TITULO
    DESCRIPCION
    CATEGORIA
    LATITUD
    LONGITUD
    FECHADEHECHO
}

class Categoria{
- nombre: String
}

class ContenidoMultimedia{
- path: String
}

class Coordenada{
- latitud: Double
- longitud: Double
--
+ comoArray(): Double[]
}

class Hecho{
- título: String
- descripción: String
- categoría: Categoria
- lugarAcontecimiento: Coordenada
- fechaHecho: LocalDateTime
- fechaDeCarga: LocalDateTime
- id: Long
- idDataset: Long
- eliminado: Boolean
}

class LectorDeCSV{
- pathArchivo: PathDataset
--
- leerHechosDeCSV(): ArrayList<Hecho>
- getHechos(): ArrayList<Hecho>
}

enum OrigenHecho{
CARGA_MANUAL
CONTRIBUYENTE
DATASET
PROXY
}

class PathDataset{
- id: Long
- path: String
- fechaCarga: LocalDateTime
}


Hecho --> Categoria
Hecho --> ContenidoMultimedia
Hecho --> OrigenHecho
Hecho --> Coordenada

LectorDeCSV *--> Hecho
LectorDeCSV ..> CamposHecho
LectorDeCSV --> PathDataset


@enduml